<resources>
    <string name="app_name">TradeList</string>
    <string name="action_donate">Donate</string>
    <string name="action_postads">Enter details</string>
    <string name="action_report">All Donations</string>
    <string name="action_favourites">My Favourites</string>
    <string name="title_profile">My Profile</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>

    <string name="select_image">Select image</string>


    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Add your name</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_donate">Donate</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>

    <string name="action_edit">Edit Donation</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
<!--    <string name="default_web_client_id">AIzaSyBRjNZegT25AtW9HaAPqFJzww5GTYMcpo4</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_name">Enter your name</string>
    <string name="upload_image_if_any">Upload image if any:</string>
    <string name="product_description">Product detailed description:</string>
    <string name="product_price_bartering_item_name">Product price / Bartering item name:</string>
    <string name="product_name">Product Name:</string>
    <string name="tell_us_about_the_product_you_would_like_to_sell_or_barter">Tell us about the product or service you would like to sell, provide or exchange. The more you define about your product or service, The better views and responses you will get.</string>
    <string name="post_ad">Post Ad</string>
    <string name="profile">Profile</string>
    <string name="product_price">product_price</string>
    <string name="productname">productName</string>
    <string name="todo">TODO</string>
    <string name="short_description">Short description:</string>
    <string name="some_random_text_to_fill_up_short_description_of_100_words_to_200_words_can_be_more_but_ideally_it_has_to_be_in_full_description">Some random text to fill up short description of 100 words to 200 words. Can be more but ideally it has to be in full description.</string>
    <string name="posted_by">Posted By:</string>
    <string name="alex">Alex</string>
    <string name="contact_details">Contact details:</string>
    <string name="a_b_c_com">a.b@c.com</string>
    <string name="some_description_that_can_be_large_enough_some_description_that_can_be_large_enough_some_description_that_can_be_large_enough_some_description_that_can_be_large_enough_some_description_that_can_be_large_enough">Some description that can be large enough Some description that can be large enough Some description that can be large enough Some description that can be large enough Some description that can be large enough</string>
    <string name="price_exchange">Price/Exchange:</string>
    <string name="description">Description:</string>
    <string name="product_short_description">Product short description:</string>
    <string name="joey_tribbiani">Joey Tribbiani</string>
    <string name="some_random_short_description_full_of_small_words_to_inflate_this_view">Some random short description full of small words to inflate this view.</string>
    <string name="update_post">Update Post</string>
    <string name="selling_price_exchange_with">Selling Price / Exchange with</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_favourites">My Favourites</string>
    <string name="access_control">Access Control</string>
    <string name="my_ads">My Ads</string>
    <string name="home">Home</string>
    <string name="search">Search..</string>
    <string name="total_favourites">Total Favourites</string>
    <string name="_873">873</string>
    <string name="total_ads">Total Ads</string>
    <string name="_453k">453K</string>
    <string name="enter_your_address">Enter your address</string>

    <!--END Firebase Resources-->
</resources>
