<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_myads"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/my_ads" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/my_favourites" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_menu_friendslist"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/access_control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
