<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="278dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="404dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/headings"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/product_name"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/short_description"
                android:textColor="@color/headings"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_shortdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/some_random_text_to_fill_up_short_description_of_100_words_to_200_words_can_be_more_but_ideally_it_has_to_be_in_full_description"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Posted On: "
                android:textColor="@color/headings"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/posted_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/alex"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
            android:layout_width="wrap_content"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/posted_by"
            android:textColor="@color/headings"
            android:textSize="15sp" />

            <TextView
                android:id="@+id/posted_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/alex"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_details"
                android:textColor="@color/headings"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/a_b_c_com"
                android:textColor="#000000"
                android:textSize="13sp" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>