<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="15dp"
    android:layout_width="170dp"
    android:layout_height="210dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_image"
                android:text="@string/productname"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_below="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/product_price"
                android:textColor="@color/cardview_dark_background"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                app:srcCompat="@drawable/garden"
                android:foreground="@drawable/rounded_corner_mask"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>