<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PostAdsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/enter_details_text"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_bartering_item_name"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/product_price_bname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image_if_any"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

               <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/nav_header_desc"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    app:srcCompat="@android:drawable/ic_menu_upload" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageUploaded"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="150dp"
                android:contentDescription="@string/nav_header_desc"
                android:gravity="center|center_horizontal"
            />

            <Button
                android:id="@+id/postNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grad"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:text="Post now" />

        </LinearLayout>

        <EditText
            android:id="@+id/enter_details_text"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tell_us_about_the_product_you_would_like_to_sell_or_barter"
            android:background="#00000000"
            android:inputType="textMultiLine" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>